--- a/app/static/catelog_buyer.css
+++ b/app/static/catelog_buyer.css
@@ -18,8 +18,7 @@ body {
 .card {
     margin-top: 50px;
     display: flex;
-    margin-left: -15px;
-    margin-right: 30px;
+    margin-left: -20px;
 }
 
 .product-list{
